# SimBaD

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _clang-format  index.html  params.json  update-docker-images.sh  update-run-images.sh
cli/: .CMakeLists.txt.swp  CMakeLists.txt
cli/inc/: argument_parser.hpp  cli_def.hpp  cli_fwd.hpp  launcher.h  launcher.hpp
cli/src/: argument_parser.cpp  launcher.cpp  main.cpp
cli/test/: ut_argument_parser.cpp  ut_model_chooser.cpp  ut_snapshotting.cpp
core/: .clang-format  CMakeLists.txt  core_def.hpp  core_fwd.hpp
core/configurations/: cubic_crystal_configuration.cpp  cubic_crystal_configuration.hpp  default_attributed_configuration.cpp  default_attributed_configuration.hpp  enriched_configuration.cpp  enriched_configuration.hpp  enriched_configuration.hpp.autosave  poisson_configuration.cpp  poisson_configuration.hpp  selected_attributes_configuration.cpp  selected_attributes_configuration.hpp  slice_configuration.cpp  slice_configuration.hpp  stacked_view_configuration.cpp  stacked_view_configuration.hpp
core/coordinates/: coord_generators.hpp  coordinates.hpp  scale_coord_tiler.hpp
core/fixed/: conversion.hpp  fixed.hpp  fixed_math.hpp  int_base.hpp
core/inc/: abstract_model_factory.h  accumulator.hpp  argument_parser.hpp  board.hpp  board_coordinates.hpp  board_impl.hpp  board_tile.hpp  cartesian_spacetime.hpp  cartesian_spacetime_decl.hpp  coord_generators.hpp  coord_tiler.hpp  coordinates.hpp  core.h  core_def.hpp  core_fwd.hpp  core_old.h  counting_tree.h  event_kind.hpp  event_partial.hpp  generic_particle.h  handle.hpp  handle_trackee.hpp  handle_updater.hpp  heapified_board_tile.hpp  launch_utils.hpp  lazy_set.hpp  lazy_set_chunk.hpp  lazy_set_impl.hpp  member_iterator.h  model.h  model.hpp  model_factory.h  model_factory.hpp  model_loader.h  model_loader.hpp  model_register.hpp  ordered_board.hpp  ordered_board_decl.hpp  ordered_board_tile.hpp  ordered_tile.hpp  (+30 more)
core/interface/: attribute.cpp  attribute.hpp  attribute_description.cpp  attribute_description.hpp  attribute_descriptor.cpp  attribute_descriptor.hpp  attribute_descriptor_record.cpp  attribute_descriptor_record.hpp  attribute_list.hpp  attribute_mapping.cpp  attribute_mapping.hpp  attribute_tree.hpp  configuration_reader.cpp  configuration_reader.hpp  configuration_view.cpp  configuration_view.hpp  dataframe.cpp  dataframe.hpp  dataframe_view.cpp  dataframe_view.hpp  event.cpp  event.hpp  event_kind.cpp  event_kind.hpp  event_sink.cpp  event_sink.hpp  event_source.cpp  event_source.hpp  finite_dataframe.cpp  finite_dataframe.hpp  model.hpp  model_factory.cpp  model_factory.hpp  model_register.cpp  model_register.hpp  object_descriptor.hpp  particle.cpp  particle.hpp  property_tree.cpp  property_tree.hpp  (+1 more)
core/io/: csv_printer.hpp  csv_reader.cpp  csv_reader.hpp  json_configuration_printer.hpp  stream_printer.hpp  stream_reader.hpp  text_configuration_printer.cpp  text_configuration_printer.hpp
core/legacy/: event_partial.cpp
core/object_tracking/: handle_updater.hpp  ptr_updater.hpp  uni_trackee.hpp
core/processors/: configuration_builder.cpp  configuration_builder.hpp  csv_printer.cpp  csv_printer.hpp  dataframe_tracker.cpp  dataframe_tracker.hpp  json_configuration_printer.cpp  json_configuration_printer.hpp  launch_utils.cpp  launch_utils.hpp  snapshotter.cpp  snapshotter.hpp  stream_printer.cpp  stream_printer.hpp  text_configuration_printer.cpp  text_configuration_printer.hpp  tree_builder.cpp  tree_builder.hpp
core/src/: core.cpp  core_old.cpp  event.cpp  event_kind.cpp  generic_particle.cpp  launch_utils.cpp  model.cpp  model_factory.cpp  model_loader.cpp  model_register.cpp  particle.cpp  particle_interface.cpp  poisson_configuration.cpp  properties.cpp  property_tree.cpp  simple_event_queue.cpp  skewed_beta_mutation.cpp  text_configuration_printer.cpp
core/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  test_board.cpp  test_board_coords.cpp  test_board_tile.cpp  test_fixed.cpp  test_lazy_set.cpp  test_lazy_set_chunk.cpp  test_template_instantiation.cpp  test_tile.cpp  test_tracking.cpp  ut_argument_parser.cpp  ut_attribute.cpp  ut_attribute_serialization.cpp  ut_attributes_descriptor.cpp  ut_binary_tree.cpp  ut_board.cpp  ut_board_coords.cpp  ut_board_tile.cpp  ut_cartesian_spacetime.cpp  ut_configuration_builder.cpp  ut_csv_reader.cpp  ut_cubic_crystal_configuration.cpp  ut_dataframe_tracker.cpp  ut_generic_particle.cpp  ut_lazy_set.cpp  ut_lazy_set_chunk.cpp  ut_ordered_board.cpp  ut_pairing_heap.cpp  ut_parent_from_member.cpp  ut_poisson_configuration.cpp  ut_power_law_distribution.cpp  ut_properties.cpp  ut_simple_point_and_event.cpp  ut_skewed_beta_mutation.cpp  ut_skewed_poly_mutation.cpp  ut_space.cpp  ut_spacetime.cpp  ut_tilers.cpp  (+1 more)
core/utils/: attribute_converter.hpp  attribute_exceptions.cpp  attribute_exceptions.hpp  attribute_mapping.cpp  attribute_mapping.hpp  attribute_vector.cpp  attribute_vector.hpp  auto_rehash.hpp  class_register.hpp  counting_id_generator.cpp  counting_id_generator.hpp  generic_particle.cpp  generic_particle.hpp  object_factory.hpp  parent_from_member.hpp  properties.cpp  properties.hpp
gui/: .CMakeLists.txt.swp  CMakeLists.txt
gui/forms/: dialog_for_init_model.ui  dialog_open_model.ui  frame_for_statistics.ui  mainwindow.ui  new_event_dialog.ui  simulation_dialog.ui
gui/inc/: dialog_for_init_model.h  dialog_open_model.h  distribution_of_particle.h  event_of_model.h  frame_for_statistics.h  function_for_component_rate.h  glwidjet_for_init_model.h  mainwindow.h  model_of_space.h  my_glwidget.h  new_event_dialog.h  simulation_dialog.h  table_of_component_rates.h
gui/src/: dialog_for_init_model.cpp  dialog_open_model.cpp  distribution_of_particle.cpp  event_of_model.cpp  frame_for_statistics.cpp  function_for_component_rate.cpp  glwidjet_for_init_model.cpp  main.cpp  mainwindow.cpp  model_of_space.cpp  my_glwidget.cpp  new_event_dialog.cpp  simulation_dialog.cpp  table_of_component_rates.cpp
src/: CMakeLists.txt
trunk/: CMakeLists.txt
(+673 files in other folders)
